@startuml
title Diagrama de clases — ms-proveedores [PRV] (Vista general)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "Modelos ORM (Peewee)" {
  class BaseModel
  class Proveedor
  class Contrato
  class Evaluacion
  class Cotizacion
  class DocumentoProveedor
}

package "Servicios" {
  class ProveedorService
  class ContratoService
  class EvaluacionService
  class CotizacionService
  class DocumentoService
}

package "Schemas Pydantic" {
  class ProveedorCreate
  class ProveedorUpdate
  class ProveedorResponse
  class ContratoCreate
  class ContratoUpdate
  class ContratoResponse
  class EvaluacionCreate
  class EvaluacionResponse
  class CotizacionCreate
  class CotizacionUpdate
  class CotizacionResponse
  class DocumentoProveedorCreate
  class DocumentoProveedorResponse
  class CotizacionComparacion
}

package "Clientes HTTP" {
  class AuthClient
  class RolesClient
  class NotificacionesClient
  class AuditoriaClient
}

package "Infraestructura" {
  class RequestIDMiddleware
  class LoggingMiddleware
  class RoleChecker
  class StandardResponse
}

ProveedorService ..> Proveedor
ProveedorService ..> Contrato
ContratoService ..> Proveedor
ContratoService ..> Contrato
EvaluacionService ..> Proveedor
EvaluacionService ..> Evaluacion
EvaluacionService ..> Contrato
CotizacionService ..> Proveedor
CotizacionService ..> Cotizacion
DocumentoService ..> Proveedor
DocumentoService ..> DocumentoProveedor

ProveedorService ..> ProveedorCreate
ProveedorService ..> ProveedorUpdate
ContratoService ..> ContratoCreate
ContratoService ..> ContratoUpdate
EvaluacionService ..> EvaluacionCreate
CotizacionService ..> CotizacionCreate
CotizacionService ..> CotizacionUpdate
CotizacionService ..> CotizacionComparacion
DocumentoService ..> DocumentoProveedorCreate

EvaluacionService ..> NotificacionesClient
ContratoService ..> NotificacionesClient
DocumentoService ..> NotificacionesClient

BaseModel <|-- Proveedor
BaseModel <|-- Contrato
BaseModel <|-- Evaluacion
BaseModel <|-- Cotizacion
BaseModel <|-- DocumentoProveedor

Proveedor "1" --> "0..*" Contrato
Proveedor "1" --> "0..*" Evaluacion
Proveedor "1" --> "0..*" Cotizacion
Proveedor "1" --> "0..*" DocumentoProveedor
Contrato "1" --> "0..*" Evaluacion

note bottom of BaseModel
Atributos comunes:
created_at, updated_at
end note

note right
Diagramas detallados:
  - clases_modelos_ms-proveedores.puml
  - clases_servicios_schemas_ms-proveedores.puml
  - clases_infraestructura_ms-proveedores.puml
end note

@enduml
